# DIILFE

./: README.md
src/: CMakeLists.txt  app.rc  build.bat  build_bash  diirlootfiltereditor.pro  filehandler.cpp  filehandler.h  main.cpp  main.qml  qml.qrc  qmlstyles.cpp  qmlstyles.h  qtquickcontrols2.conf
src/MaterialIcons/: MaterialIconsMapping.js  materialicons.qrc
src/MaterialIcons/.hg/: dirstate  hgrc  undo.desc
src/MaterialIcons/.hg/cache/: branch2-base  rbc-revs-v1  tags2-visible
src/MaterialIcons/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/MaterialIcons/.hg/store/data/: _material_icons-_regular.ttf.d  _material_icons-_regular.ttf.i  _material_icons_mapping.js.i  materialicons.qrc.i
src/QML/: ElementEdit.qml  ElementListView.qml  MainMenu.qml  ObjectListView.qml  diirlf.qrc
src/QML/Common/: D2RLFComboBox.qml  D2RLFHorisontalSeparator.qml  D2RLFInfoPopup.qml  D2RLFLabel.qml  D2RLFMaterialButton.qml  D2RLFMaterialIconButtonWithLabel.qml  D2RLFMaterialIconLabel.qml  D2RLFTextField.qml  D2RLFVerticalSeparator.qml
src/QML/ElementEdit/: ColorPopup.qml
src/QML/ObjectListView/: LangSelectPopup.qml
